--- a/views/home.html
+++ b/views/home.html
@@ -179,48 +179,56 @@
           <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
         </div>
         <div class="small-4 columns text-center">
-          <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
+          <a href="http://www.mrisoftware.com/"> <img src="/img/sponsors/mri.png" /> </a>
         </div>
       </div>
       <div class="row sponsor-row">
+        <div class="small-4 columns text-center">
+          <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
+        </div>
         <div class="small-4 columns text-center">
           <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
         </div>
         <div class="small-4 columns text-center">
           <a href="http://www.smuckers.com/"> <img src="/img/sponsors/smuckers.png" /> </a>
         </div>
+      </div>
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
         </div>
-      </div>
-      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
         </div>
         <div class="small-4 columns text-center">
           <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
         </div>
+      </div>
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
         </div>
-      </div>
-      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
         </div>
         <div class="small-4 columns text-center">
           <a href="https://hurricanelabs.com/"> <img src="/img/sponsors/hurricane.png" /> </a>
         </div>
+      </div>
+      <div class="row sponsor-row">
+        <div class="small-4 columns text-center">
+          <a href="http://www.graftech.com/"> <img src="/img/sponsors/graftech.png" /> </a>
+        </div>
         <div class="small-4 columns text-center">
           <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
+        </div>
+        <div class="small-4 columns text-center">
+          <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg"/> </a>
         </div>
       </div>
       <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg"/> </a>
         </div>
         <div class="small-4 columns text-center end">
           <a href="http://www.oeconnection.com/"> <img src="/img/sponsors/OEC.png" /> </a>
