Adds color palette and logo image

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,21 @@
-$body-background-color: #111;
+//Color Pallette
+$lightBlue: #4D7ABD;
+$darkBlue: #2B3F66;
+$teal: #5AC2AE;
+$orange: #F7961D; 
+$pink: #D21C5A;
+$black: #111;
 
 body {
-	background-color: $body-background-color;
+	background-color: #000;
 }
+
+* {
+	font-family: 'Abel', sans-serif;
+}
+
+h1, h2 {
+	font-family: 'Oswald', sans-serif;
+}
+
+
