--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,8 @@
 <div id="top">
 	<canvas></canvas>
+	<div class="row" id="logo">
+	    <div class="small-12 columns align-center">
+	      <img src="/img/blue_logo.svg" alt="Kent Hack Enough">
+	    </div>
+  </div>
 </div>
