--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,102 @@
+<script>
+	var loader = new THREE.XHRLoader();
+	loader.load( 'app.json', function ( text ) {
+
+		var json = JSON.parse( text );
+
+		var player = new THREED.Player();
+		player.load( json );
+		player.setSize( window.innerWidth, window.innerHeight );
+		player.play();
+
+		//document.body.appendChild( player.dom );
+
+
+		window.addEventListener( 'resize', function () {
+			player.setSize( window.innerWidth, window.innerHeight );
+		} );
+
+	} );
+
+</script>
+<!-- <canvas id="threed"></canvas> -->
 <div id="top">
-	<canvas></canvas>
 	<div class="row" id="logo">
-	    <div class="small-12 columns align-center">
-	      <img src="/img/blue_logo.svg" alt="Kent Hack Enough">
+	    <div class="small-12 columns align-center show-for-large-up">
+	      <img src="/img/blue_logo.svg" alt="Kent Hack Enough" >
 	    </div>
+	    <div class="small-8 medium-6 small-offset-2 medium-offset-3 end columns hide-for-large-up">
+	    	<img src="/img/shortLogo.png" alt="Kent Hack Enough" >
+	    </div>
+</div> <!-- top -->
+	    
+<div class="small-12 medium-8 medium-offset-2 large-4 large-offset-4 columns align-center">
+      
+      <div class="white small" ng-repeat="e in home.errors">{{e}}</div>
+      <div ng-if="!home.user">
+        <br>
+        <a class="apply" ng-click="home.register = true; home.showLogin = false">Apply</a> |
+        <a class="apply" ng-click="home.register = true; home.showLogin = true">Login</a>
+      </div>
+      
+      <button ng-if="home.user" class="apply" ui-sref="apply.page1">Your Application</button>
+      <div ng-if="home.user && home.application.status == 'approved'" class="align-center" ng-click="home.apply.toggleGoing()">
+        <span ng-if="!home.application.going" class="white">Click the button below to RSVP!</span>
+        <span ng-if="home.application.going" class="white">You are coming to Kent Hack Enough!</span>
+        <button class="apply">
+          <span ng-if="!home.application.going" class="white oswald">RSVP</span>
+          <span ng-if="home.application.going" class="white oswald">Un-RSVP</span>
+        </button>
+      </div>
+      
+      <div ng-if="home.user" class="align-center">
+        <a href="/account" class="white">Change Email/Password</a> |
+        <a ng-click="home.person.logout()" class="white">Logout</a>
+        <br><br>
+      </div>
+
+    </div>
+
+
+<div id="login" ng-if="true">
+    <div class="row">
+      <div class="small-12 columns" ng-if="!home.showLogin">
+        <h2>Sign Up</h2>
+        <div class="switch">
+          <a ng-click="home.showLogin = true" class="white">Already created an account?</a>
+        </div>
+        <div class="white small" ng-repeat="e in home.person.errors">{{e}}</div>
+        <form ng-submit="home.person.register()">
+          <label>
+            Email
+            <input type="email" ng-model="home.person.email" placeholder="jdoe@example.edu">
+          </label>
+          <label>
+            Password
+            <input type="password" ng-model="home.person.password" placeholder="1234 :-)">
+          </label>
+          <button><span><i class="fa fa-arrow-right"></i></span>Register</button>
+        </form>
+      </div>
+      <div class="small-12 columns" ng-if="home.showLogin">
+        <h2>Login</h2>
+        <div class="switch">
+          <a ng-click="home.showLogin = false" class="white">Create an account</a> |
+          <a ui-sref="recover" class="white">Forgot your password?</a>
+        </div>
+        <div class="white small" ng-repeat="e in home.person.errors">{{e}}</div>
+        <form ng-submit="home.person.login()">
+          <label>
+            Email
+            <input type="email" ng-model="home.person.email" placeholder="jdoe@example.edu">
+          </label>
+          <label>
+            Password
+            <input type="password" ng-model="home.person.password" placeholder="1234 :-)">
+          </label>
+          <button><span><i class="fa fa-arrow-right"></i></span>Sign In</button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
