--- a/views/home.html
+++ b/views/home.html
@@ -1,339 +1,134 @@
-<div id="splash">
+<img src="Images/blue_logo.svg" id="logo">
+<canvas id="waves"></canvas>
+<div id="info">
+  <h2>October 7-9th, 2016</h2>
+  <h2>Kent State University Library</h2>
+  <p><a href="mailto:staff@khe.io">staff@khe.io</a></p>
+  <a href="Sponsorship.Packet.pdf"><div class="btn">Sponsor Info</div></a><br>
+  <input type="email" placeholder="MAILING LIST" id="newsletter-sign-up" spellcheck="false" />
 
-  <!-- Layered background -->
-  <img src="/img/layer1.svg" id="layer1"><img src="/img/layer2.svg" id="layer2">
+  <footer>
+  <div id="media">
 
-  <div class="row" id="icons">
-    <div class="small-12 columns align-center">
-      <img src="/img/icons.svg" alt="Kent Hack Enough">
-    </div>
   </div>
-
-  <div class="row" id="logo">
-    <div class="small-12 columns align-center">
-      <img src="/img/logo.svg" alt="Kent Hack Enough">
-    </div>
-  </div>
-
-  <div class="row" id="date">
-    <div class="small-12 columns align-center">
-      <h2>OCTOBER 9 - 11, 2015 <span class="horizontal-spacer">|</span> KENT STATE UNIVERSITY</h2>
-    </div>
-  </div>
-
-  <div class="row" id="updates">
-    <div class="small-12 medium-8 medium-offset-2 large-4 large-offset-4 columns align-center">
-      <!-- Pre-register -->
-      <!--<p class="align-center">Get updates about KHE:</p>
-      <p class="align-center" ng-repeat="message in home.mail.successes">{{message}}</p>
-      <p class="align-center" ng-repeat="message in home.mail.errors">{{message}}</p>
-      <form ng-if="!home.mail.successes" ng-submit="home.mail.add()">
-        <div class="row collapse">
-          <div class="small-10 columns">
-            <input type="text" placeholder="Email" ng-model="home.mail.email">
-          </div>
-          <div class="small-2 columns">
-            <button href="#" class="button postfix">Go</button>
-          </div>
-        </div>
-      </form>-->
-      <!-- /Pre-register -->
-      <div class="white small" ng-repeat="e in home.errors">{{e}}</div>
-      <div ng-if="!home.user">
-        <br>
-        <!-- <a class="apply" ng-click="home.loginRegister = true; home.showLogin = false">Apply</a> | -->
-        <!-- <a class="apply" ng-click="home.loginRegister = true; home.showLogin = true">Login</a> -->
-      </div>
-      <button ng-if="home.user" class="apply" ui-sref="apply.page1">Your Application</button>
-      <div ng-if="home.user && home.application.status == 'approved'" class="align-center" ng-click="home.apply.toggleGoing()">
-        <span ng-if="!home.application.going" class="white">Click the button below to RSVP!</span>
-        <span ng-if="home.application.going" class="white">You are coming to Kent Hack Enough!</span>
-        <button class="apply">
-          <span ng-if="!home.application.going" class="white oswald">RSVP</span>
-          <span ng-if="home.application.going" class="white oswald">Un-RSVP</span>
-        </button>
-      </div>
-      <div ng-if="home.user" class="align-center">
-        <a href="/account" class="white">Change Email/Password</a> |
-        <a ng-click="home.person.logout()" class="white">Logout</a>
-        <br><br>
-      </div>
-
-      <!-- <button class="apply" ui-sref="schedule">Schedule</button> -->
-      <button class="apply" ui-sref="live">KHE Live</button>
-      <button class="apply" href="http://kenthackenough15.devpost.com/">Submit your hacks</button>
-    </div>
-
-    <!-- Schedule and live pages -->
-    <!--<div class="row">
-      <div class="small-12 columns align-center">
-        <nav>
-          <a ui-sref="live">GET UPDATES</a>
-          <a ui-sref="schedule">VIEW THE SCHEDULE</a>
-        </nav>
-      </div>
-    </div>-->
-  </div>
-
-  <div class="blinds" ng-if="home.loginRegister && !home.user" ng-click="home.loginRegister = false"></div>
-  <div id="login" ng-if="home.loginRegister && !home.user">
-    <div class="row">
-      <div class="small-12 columns" ng-if="!home.showLogin">
-        <h2>Sign Up</h2>
-        <div class="switch">
-          <a ng-click="home.showLogin = true" class="white">Already created an account?</a>
-        </div>
-        <div class="white small" ng-repeat="e in home.person.errors">{{e}}</div>
-        <form ng-submit="home.person.register()">
-          <label>
-            Email
-            <input type="email" ng-model="home.person.email" placeholder="jdoe@example.edu">
-          </label>
-          <label>
-            Password
-            <input type="password" ng-model="home.person.password" placeholder="1234 :-)">
-          </label>
-          <button><span><i class="fa fa-arrow-right"></i></span>Register</button>
-        </form>
-      </div>
-      <div class="small-12 columns" ng-if="home.showLogin">
-        <h2>Login</h2>
-        <div class="switch">
-          <a ng-click="home.showLogin = false" class="white">Create an account</a> |
-          <a ui-sref="recover" class="white">Forgot your password?</a>
-        </div>
-        <div class="white small" ng-repeat="e in home.person.errors">{{e}}</div>
-        <form ng-submit="home.person.login()">
-          <label>
-            Email
-            <input type="email" ng-model="home.person.email" placeholder="jdoe@example.edu">
-          </label>
-          <label>
-            Password
-            <input type="password" ng-model="home.person.password" placeholder="1234 :-)">
-          </label>
-          <button><span><i class="fa fa-arrow-right"></i></span>Sign In</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="dark-section">
-  <card></card>
-  <div class="row">
-    <div class="small-12 columns">
-      <div class="row">
-        <div class="small-12 columns">
-         <h1>DESIGN. BUILD. PARTY.</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 columns">
-          <h3>ABOUT</h3>
-          <p>
-            Kent Hack Enough brings hackers from all over the nation together to learn something new, party hard, and create something awesome. With more than 250 highly motivated, creative, and talented participants, Kent Hack Enough is a weekend-long event where students from all areas of interest come together to make something awesome, like an app, website or hardware hack. The entire event is free for students, including food, energy drinks, and swag. In between all the coding, designing, and water pong, our sponsors are available as mentors to provide help and expertise throughout the hacking process.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 large-6 columns">
-          <h3>ATTENDEES</h3>
-          <p>
-            Kent Hack Enough is free and open to students of all majors. If you are a high school student or a minor, please contact us for more information about how to attend. We’ll send you a waiver for your parents to sign and return before the event, and then you’ll be allowed in. If you’re traveling to Kent, please contact us for more information about travel reimbursement.
-          </p>
-        </div>
-        <div class="small-12 large-6 columns">
-          <h3>RULES</h3>
-          <p>
-            We require that all entries be created from scratch, during the competition. The use of 3rd party libraries and APIs is allowed and encouraged. Teams are limited to four people. To provide hackers with the best possible environment for learning, networking, and creating we adhere to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="white" target="_blank">MLH Code of Conduct</a>.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="light-section" id="sponsors">
-  <div class="row">
-    <div class="small-12 columns">
-      <div class="row">
-        <div class="small-12 columns">
-          <h2>SPONSORS</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 columns">
-          <br>
-          <p>
-            Interested in sponsoring KHE 2015? Take a look at our
-            <a target="_blank" href="/SponsorshipPacket.pdf">sponsorship packet</a>
-            and <a href="mailto:staff@khe.io">contact us</a> (staff@khe.io).
-          </p>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="http://knightfoundation.org/"> <img src="/img/sponsors/knight-foundation.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://www.smuckers.com/"> <img src="/img/sponsors/smuckers.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="https://hurricanelabs.com/"> <img src="/img/sponsors/hurricane.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg"/> </a>
-        </div>
-        <div class="small-4 columns text-center end">
-          <a href="http://www.oeconnection.com/"> <img src="/img/sponsors/OEC.png" /> </a>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="https://www.mobiledefense.com/"> <img src="/img/sponsors/mobiledefense.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center end">
-          <a href="https://www.kent.edu/blackstonelaunchpad"> <img src="/img/sponsors/blackstone.svg"/> </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 columns">
-          <br><br>
-          <h2>SUPPORTERS</h2>
-          <br>
-        </div>
-      </div>
-      <div class="row sponsor-row">
-        <div class="small-4 columns text-center">
-          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
-        </div>
-        <div class="small-4 columns text-center">
-          <a href="http://www.library.kent.edu/"> <img src="/img/sponsors/university-library.png" /> </a>
-        </div>
-        <div class="small-4 columns text-center end">
-          <a href="https://www.kent.edu/cs"> <img src="/img/sponsors/cs.png"/> </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="dark-section">
-  <div class="row">
-    <div class="small-12 columns">
-      <div class="row">
-        <div class="small-12 columns">
-          <h2>CONTACT</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 large-6 columns">
-          <p>
-            If you have any questions, concerns, or problems, please do not hesitate to contact us. One of our organizers will get back to you as soon as humanly possible.
-          </p>
-          <p>
-            For questions regarding travel reimbursement, please leave your name, where you are traveling from, and tell us a little bit about yourself.
-          </p>
-        </div>
-        <div class="small-12 large-6 columns">
-          <form ng-submit="home.contact.submit()">
-            <div class="row">
-              <div class="small-12 columns">
-                <p ng-repeat="message in home.contact.errors">{{message}}</p>
-                <p ng-repeat="message in home.contact.successes">{{message}}</p>
-              </div>
-            </div>
-            <!-- Subject -->
-            <div class="row">
-              <div class="small-12 columns">
-                <label>
-                  Subject
-                  <input type="text" placeholder="Travel Reimbursement" ng-model="home.contact.new.subject">
-                </label>
-              </div>
-            </div>
-            <!-- Name -->
-            <div class="row">
-              <div class="small-12 columns">
-                <label>
-                  Name
-                  <input type="text" placeholder="John Doe" ng-model="home.contact.new.name">
-                </label>
-              </div>
-            </div>
-            <!-- Reply to -->
-            <div class="row">
-              <div class="small-12 columns">
-                <label>
-                  Email
-                  <input type="email" placeholder="name@example.com" ng-model="home.contact.new.replyTo">
-                </label>
-              </div>
-            </div>
-            <!-- Body -->
-            <div class="row">
-              <div class="small-12 columns">
-                <label>
-                  Body
-                  <textarea rows="6" placeholder="What's up?" ng-model="home.contact.new.body"></textarea>
-                </label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="small-12 columns">
-                <button>Send</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<footer id="site-footer">
-  <div class="container">
-    <p>POWERED BY</p>
-    <a href="http://hacksu.com" target="_blank"><img src="/img/hacksu-logo.svg" alt="HacKSU" id="hacksu-logo"></a>
-    <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
+  <div id='powered'>
+    <h4>Powered by</h4>
+    <a href="http://hacksu.cs.kent.edu/"><img src="Images/Hacksu_Color.svg" id="hacksu"></a>
   </div>
 </footer>
+</div>
+<script type="text/javascript">
+  /**
+   * Provides requestAnimationFrame in a cross browser way.
+   * @author paulirish / http://paulirish.com/
+   */
+  if ( !window.requestAnimationFrame ) {
+    window.requestAnimationFrame = ( function() {
+      return window.webkitRequestAnimationFrame ||
+      window.mozRequestAnimationFrame ||
+      window.oRequestAnimationFrame ||
+      window.msRequestAnimationFrame ||
+      function( /* function FrameRequestCallback */ callback, /* DOMElement Element */ element ) {
+        window.setTimeout( callback, 1000 / 60 );
+      };
+    } )();
+  }
+</script>
+<script type="text/javascript">
+  $(function () {
+    var newsletter = $("#newsletter-sign-up");
+    newsletter.keyup(function (e) {
+      if (e.keyCode == 13) {
+        $.post({
+          url: "https://api.khe.io/v1.0/news",
+          data: JSON.stringify({email: newsletter.val()}),
+          contentType: "application/json; charset=utf-8",
+          dataType: "json",
+          success: function(data) {
+            newsletter.attr("placeholder", "See you soon");
+            newsletter.attr("disabled", true);
+          },
+          error: function(data) {
+            newsletter.attr("placeholder", "Oops. Something went wrong! Try that again?");
+            newsletter.keyup(function (e) {
+            })
+          }
+        });
+        console.log(newsletter.val());
+        newsletter.val("");
+      }
+    });
+  });
+  /* Wave Script
+   * Nicholas Crawford 2016
+   * Adapted from mr doob's code : http://mrdoob.com/lab/javascript/requestanimationframe/
+  */
+  var canvas, context, dt;
+  var stroke = 4;
+  var periods = 3;
+  init();
+  animate();
+  function init() {
+      canvas = document.getElementById('waves');
+      context = canvas.getContext( '2d' );
+      canvas.width = canvas.width * 4;
+      canvas.height = canvas.height * 4;
+      dt = 0;
+  }
+  function animate() {
+      requestAnimationFrame( animate );
+      dt = dt + 1;
+      if (!drawWave('#D21C5A', 9, 2, 0.62, true)) { //Check to see if the slowest wave (Pink) is done drawing
+        $('#logo').css('opacity', '1'); //fade in logo
+
+        setTimeout( function(){ //Fade in date
+          $('h2').css('opacity', '1');
+          },500);
+
+        setTimeout( function(){
+          $('p').css('opacity', '1');
+          },750);
+        setTimeout( function(){
+          $('.btn').css('opacity', '1');
+        $('input').css('opacity', '1');
+        $('footer').css('opacity', '1');
+          },1000);
+
+      } else {
+        drawWave('#4D7ABD', 10, 8, 0.25, true)//Blue
+        drawWave('#F7961D', 11, 4, 0, true);//Orange
+      }
+  }
+  /*
+    Function for drawing a wave
+    Color - A string. Color of the line. Accepts 'rgb(255,255,255)'' or '#FFFFFF'
+    Speed - Speed that the line is drawn across the screen
+    Height - The height of half a period relative to the canvas height. '2' would make a curve that fills the entire canvas in one full period
+    offset - periods to offset by. Probably a decimal ex: '0.25'.
+    leftToRight [NOT READY YET]-  boolean. True will draw the line left to right. False: right to left
+  */
+  function drawWave(color, speed, height, offset, leftToRight) {
+    //Whoa math!
+    var prevX = leftToRight ? ((dt - 1) * speed) : (canvas.width - (dt - 1) * speed);
+      var prevY = Math.sin( (periods * 2) * (prevX / canvas.width) * Math.PI ) * (canvas.height-stroke)/height + canvas.height / 2;
+      var x = leftToRight ? (dt * speed) : (canvas.width - dt * speed);
+      var y = Math.sin( (periods * 2) * (x / canvas.width) * Math.PI ) * (canvas.height-stroke)/height + canvas.height / 2;
+
+      //offset
+      x = x - (offset * canvas.width / (periods / 2));
+      prevX = prevX - (offset * canvas.width / (periods / 2));
+      //return before drawing if beyond the width of the canvas
+      if (x > canvas.width) {
+        return false;
+      }
+      //Draw those sexy curves ;)
+      context.beginPath();
+      context.lineWidth=stroke;
+      context.strokeStyle = color;
+      context.moveTo( x, y );
+      context.lineTo( prevX, prevY);
+      context.closePath();
+      context.stroke();
+      return true;
+  }
+</script>
