In with Kinda Broken

--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<img src="Images/blue_logo.svg" id="logo">
+<img src="img/blue_logo.svg" id="logo">
 <canvas id="waves"></canvas>
 <div id="info">
   <h2>October 7-9th, 2016</h2>
@@ -13,7 +13,7 @@
   </div>
   <div id='powered'>
     <h4>Powered by</h4>
-    <a href="http://hacksu.cs.kent.edu/"><img src="Images/Hacksu_Color.svg" id="hacksu"></a>
+    <a href="http://hacksu.cs.kent.edu/"><img src="img/Hacksu_Color.svg" id="hacksu"></a>
   </div>
 </footer>
 </div>
