--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,7 @@ h2 {
 	color: #F7961D;
 
 	opacity: 0;
+	font-family: 'Abel', sans-serif;
 
 	-webkit-transition: opacity 3s; /* Safari */
   	transition: opacity 3s;
@@ -103,7 +104,7 @@ a {
 	position: relative;
 	border: 3px solid #2B3F66;
 	color: #4D7ABD;
-	width: 150px;
+	width: 246px;
 	display: block;
 	border-radius: 5px;
   	padding: 15px 45px;
@@ -119,7 +120,7 @@ a {
   	opacity: 0;
 }
 
-input {
+#newsletter-sign-up {
 	z-index: 100;
 	position: relative;
 	border: 3px solid #2B3F66;
@@ -138,7 +139,7 @@ input {
 	opacity: 0;
 }
 
-input:hover, input:focus {
+#newsletter-sign-up:hover, #newsletter-sign-up:input:focus {
 	outline: none;
 	color:#5AC2AE;
 	border-color:#D21C5A;
