--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
   <h2>October 7-9th, 2016</h2>
   <h2>Kent State University Library</h2>
   <p><a class="center-link" href="mailto:staff@khe.io">staff@khe.io</a></p>
-  <a href="/SponsorshipPacket.pdf"><div class="btn">Sponsor Info</div></a><br>
+  <a target="_blank" href="/SponsorshipPacket.pdf"><div class="btn">Sponsor Info</div></a><br>
   <input type="email" placeholder="MAILING LIST" id="newsletter-sign-up" spellcheck="false" />
 
   <footer>
