--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,17 @@ body {
 	transition: opacity 3s;
 }
 
+.background {
+	position: absolute;
+	min-width: 100%;
+	min-height: 100%;
+	top: 0px;
+	right: 0px;
+	background-color: black;
+	opacity: 0.80;
+	z-index: 2;
+}
+
 h2 {
 	font-size: 28pt;
 	color: #F7961D;
@@ -86,7 +97,7 @@ a {
 	width: 100%;
 	height: 20vh;
 	max-height: 200px;
-	z-index: 100;
+	z-index: 1;
 }
 
 #info {
@@ -104,7 +115,6 @@ a {
 
 	border: 3px solid #D21C5A;
 	border-radius: 5px;
-	color: #4D7ABD;
 	box-shadow: 0px 0px 30px 0px rgba(210,28,90,1);
 }
 
@@ -125,7 +135,7 @@ a {
   	cursor: hand;
 }
 
-#newsletter-sign-up {
+.neon-input {
 	z-index: 1;
 	position: relative;
 	border: 3px solid #2B3F66;
@@ -140,7 +150,7 @@ a {
 	height: 50px;
 }
 
-#newsletter-sign-up:hover, #newsletter-sign-up:focus {
+.neon-input:hover, .neon-input:focus {
 	outline: none;
 	color:#5AC2AE;
 	border-color:#D21C5A;
@@ -171,7 +181,7 @@ a {
 }
 
 /*  Mobile */
-@media (max-width: 400px) {
+@media (max-width: 550px) {
 	#logo {
 		width: 90%;
 	}
