--- a/css/app.css
+++ b/css/app.css
@@ -2,7 +2,8 @@
 Light Blue: #4D7ABD
 Dark Blue: #2B3F66
 Teal: #5AC2AE
-Orange: #F7961D
+Orange:
+
 Pink: #D21C5A
 */
 
@@ -55,29 +56,30 @@ a {
 
 .labeled-input {
 	position: relative;
-	padding-top: 20px;
 }
+
 .labeled-input > input {
-	margin-left: 0;
-	margin-right: 0;
-	text-align: left;
+	margin-top: 26;
 }
 
 .labeled-input > label {
 	display: block;
 	position: absolute;
 	color: #4D7ABD;
-	top: 52px;
-	transition: 0.5s;
+	top: 32px;
 	text-align: center;
 	left: 0;
 	right: 0;
 	line-height: 1;
 	font-size: 1.2rem;
+	-webkit-transition: top 0.5s, font-size 0.5s; /* Safari */
+	transition: top 0.5s;
 	z-index: 70;
 }
 .neon-input:focus + label, .neon-input:valid + label {
-	top: 10px;
+	top: 0px;
+	font-size: 15px;
+
 }
 
 .neon-input:focus + label, .neon-input:hover + label {
@@ -86,6 +88,7 @@ a {
 
 
 .center-link {
+	color: #F7961D;
 	position: relative;
 	display: inline-block;
 	float: none;;
@@ -155,9 +158,7 @@ a {
 	background: #111;
 	z-index: 50;
 	padding: 25px;
-	min-width: 500px;
-	min-height: 250px;
-
+	text-align: left;
 	border: 3px solid #D21C5A;
 	border-radius: 5px;
 	box-shadow: 0px 0px 30px 0px rgba(210,28,90,1);
