--- a/css/app.css
+++ b/css/app.css
@@ -45,10 +45,11 @@ p {
 	font-size: 18pt;
 	color: #5AC2AE;
 	line-height: 0.7;
+	margin: 3px;
 }
 
 a {
-	color:  #5AC2AE !important;
+	color:  #5AC2AE;
 	text-align: left;
 	position: relative;
 	float: left;
@@ -82,13 +83,12 @@ a {
 
 }
 
-.neon-input:focus + label, .neon-input:hover + label {
+.neon-input:hover + label {
 	color: #5AC2AE;
 }
 
 
 .center-link {
-	color: #F7961D;
 	position: relative;
 	display: inline-block;
 	float: none;;
@@ -150,18 +150,49 @@ a {
 	position: relative;
 }
 
-#login {
+.prompt {
 	position: absolute;
 	top: 35%;
 	right: 50%;
 	transform: translate(50%, -50%);
 	background: #111;
 	z-index: 50;
-	padding: 25px;
 	text-align: left;
 	border: 3px solid #D21C5A;
 	border-radius: 5px;
 	box-shadow: 0px 0px 30px 0px rgba(210,28,90,1);
+	overflow: hidden;
+}
+
+.prompt > .title-bar {
+	position: relative;
+	width: inherit;
+	background-color: #5AC2AE;
+	height: 50px;
+	top: -3px;
+}
+
+.prompt > .content {
+	margin: 15px;
+	margin-top: 0px;
+}
+
+.title-bar > h1 {
+	padding-left: 10px;
+	margin: 0;
+	text-align: left;
+	min-width: 30px;
+	display: inline;
+	line-height: 50px;
+	color: white;
+}
+
+.title-bar > a {
+	position: relative;
+	float: right;
+	line-height: 50px;
+	padding-right: 10px;
+	color: white;
 }
 
 .btn {
