--- a/views/home.html
+++ b/views/home.html
@@ -16,9 +16,13 @@
     </div>
   </div>
   <div class="prompt" id="login" ng-if="home.loginRegister && !home.user">
-    <div class="title-bar">
+    <div class="title-bar" ng-if="!home.login">
       <h1>REGISTER</h1>
       <a ng-click="home.login=true">Already registed? Login</a>
+    </div>
+    <div class="title-bar" ng-if="home.login">
+      <h1>LOGIN</h1>
+      <a ng-click="home.login=false">Don't have an account? Register</a>
     </div>
     <div class="content">
       <div class="labeled-input">
@@ -42,6 +46,7 @@
         <label for="password">PASSWORD</label>
       </div>
       <div ng-if="!home.login" class="btn" ng-click="home.person.register()">REGISTER</div>
+      <div ng-if="home.login" class="btn" ng-click="home.person.login()">LOGIN</div>
     </div>
     <div class="errors" ng-if="home.person.errors">
       <div ng-repeat="e in home.person.errors" class="error"> {{e}} </div>
@@ -74,30 +79,6 @@
     }
   </script>
   <script type="text/javascript">
-    $(function () {
-      var newsletter = $("#newsletter-sign-up");
-      newsletter.keyup(function (e) {
-        if (e.keyCode == 13) {
-          $.post({
-            url: "https://api.khe.io/v1.0/news",
-            data: JSON.stringify({email: newsletter.val()}),
-            contentType: "application/json; charset=utf-8",
-            dataType: "json",
-            success: function(data) {
-              newsletter.attr("placeholder", "See you soon");
-              newsletter.attr("disabled", true);
-            },
-            error: function(data) {
-              newsletter.attr("placeholder", "Oops. Something went wrong! Try that again?");
-              newsletter.keyup(function (e) {
-              })
-            }
-          });
-          console.log(newsletter.val());
-          newsletter.val("");
-        }
-      });
-    });
     /* Wave Script
      * Nicholas Crawford 2016
      * Adapted from mr doob's code : http://mrdoob.com/lab/javascript/requestanimationframe/
